--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1 class="block-h1">Hello World!</h1>
             <p class="block-p">My name is Nick Koldys and this is my CS 347 blog site. 
                 I will be making weekly posts documenting my adventures 
-            it the world of HTML, CSS, and JavaScript. I hope anyone who 
+            in the world of HTML, CSS, and JavaScript. I hope anyone who 
             reads this will find my posts interesting and maybe even learn something!
             </p>
 
@@ -17,7 +17,7 @@
 
         <div class="block">
             <h1 class="block-h1">Post 1 -- 9/8/2020</h1>
-            <p class="block-p">This is my first blog post! I have not done it yet but hopefully it turns out great.
+            <p class="block-p">This is my first blog post! I have not done it yet, but hopefully it turns out great.
             </p>
             <a class = "link" href="post1.html">View Post</a>
 
@@ -25,21 +25,21 @@
 
         <div class="block">
             <h1 class="block-h1">Post 2</h1>
-            <p class="block-p">This is my second blog post! I have not done it yet but hopefully it turns out great.
+            <p class="block-p">This is my second blog post! I have not done it yet, but hopefully it turns out great.
             </p>
 
         </div>
 
         <div class="block">
             <h1 class="block-h1">Post 3</h1>
-            <p class="block-p">This is my third blog post! I have not done it yet but hopefully it turns out great.
+            <p class="block-p">This is my third blog post! I have not done it yet, but hopefully it turns out great.
             </p>
 
         </div>
 
         <div class="block">
             <h1 class="block-h1">Post 4</h1>
-            <p class="block-p">This is my fourth blog post! I have not done it yet but hopefully it turns out great.
+            <p class="block-p">This is my fourth blog post! I have not done it yet, but hopefully it turns out great.
             </p>
 
         </div>
