--- a/index.html
+++ b/index.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CS 347</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body id = "index-body">
-        <div class="block">
-            <h1 class="block-h1">Hello World!</h1>
-            <p class="block-p">My name is Nick Koldys and this is my CS 347 blog site. 
-                I will be making weekly posts documenting my adventures 
-            in the world of HTML, CSS, and JavaScript. I hope anyone who 
+
+<head>
+    <title>CS 347</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177778286-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-177778286-1');
+    </script>
+
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body id="index-body">
+    <div class="block">
+        <h1 class="block-h1">Hello World!</h1>
+        <p class="block-p">My name is Nick Koldys and this is my CS 347 blog site.
+            I will be making weekly posts documenting my adventures
+            in the world of HTML, CSS, and JavaScript. I hope anyone who
             reads this will find my posts interesting and maybe even learn something!
-            </p>
+        </p>
 
-        </div>
+    </div>
 
-        <div class="block">
-            <h1 class="block-h1">Post 1 -- 9/8/2020</h1>
-            <p class="block-p">This is my first blog post! I have not done it yet, but hopefully it turns out great.
-            </p>
-            <a class = "link" href="post1.html">View Post</a>
+    <div class="block">
+        <h1 class="block-h1">Post 1 -- 9/8/2020</h1>
+        <p class="block-p">This is my first blog post! I have not done it yet, but hopefully it turns out great.
+        </p>
+        <a class="link" href="post1.html">View Post</a>
 
-        </div>
+    </div>
 
-        <div class="block">
-            <h1 class="block-h1">Post 2</h1>
-            <p class="block-p">This is my second blog post! I have not done it yet, but hopefully it turns out great.
-            </p>
+    <div class="block">
+        <h1 class="block-h1">Post 2</h1>
+        <p class="block-p">This is my second blog post! I have not done it yet, but hopefully it turns out great.
+        </p>
 
-        </div>
+    </div>
 
-        <div class="block">
-            <h1 class="block-h1">Post 3</h1>
-            <p class="block-p">This is my third blog post! I have not done it yet, but hopefully it turns out great.
-            </p>
+    <div class="block">
+        <h1 class="block-h1">Post 3</h1>
+        <p class="block-p">This is my third blog post! I have not done it yet, but hopefully it turns out great.
+        </p>
 
-        </div>
+    </div>
 
-        <div class="block">
-            <h1 class="block-h1">Post 4</h1>
-            <p class="block-p">This is my fourth blog post! I have not done it yet, but hopefully it turns out great.
-            </p>
+    <div class="block">
+        <h1 class="block-h1">Post 4</h1>
+        <p class="block-p">This is my fourth blog post! I have not done it yet, but hopefully it turns out great.
+        </p>
 
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
