--- a/post1.html
+++ b/post1.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CS 347</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body id = "index-body">
-        Page 2
-    </body>
+
+<head>
+    <title>CS 347</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177778286-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-177778286-1');
+    </script>
+
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body id="index-body">
+    Page 2
+</body>
+
 </html>
