--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
     <div class="block">
         <h1 class="block-h1">Post 1 -- 9/8/2020</h1>
-        <p class="block-p">This is my first blog post! I have not done it yet, but hopefully it turns out great.
+        <p class="block-p">This is my first blog post! In this post I discuss what web analytics are, why they are used,
+            and how to use them.
         </p>
         <a class="link" href="post1.html">View Post</a>
 
