--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CS 347</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177778286-1"></script>
-    <script>
+    <script>/
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -37,9 +37,10 @@
     </div>
 
     <div class="block">
-        <h1 class="block-h1">Post 2</h1>
-        <p class="block-p">This is my second blog post! I have not done it yet, but hopefully it turns out great.
+        <h1 class="block-h1">Post 2 -- 9/17/2020</h1>
+        <p class="block-p">This is my second blog post! This week we will talk about the application of microservices in web development, or micro frontends. 
         </p>
+        <a class="link" href="post2.html">View Post</a>
 
     </div>
 
