--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
 
     <div class="block">
         <h1 class="block-h1">Post 2 -- 9/17/2020</h1>
-        <p class="block-p">This is my second blog post! This week we will talk about the application of microservices in web development, or micro frontends. 
+        <p class="block-p">This is my second blog post! This week we will talk about the application of microservices in
+            web development, or micro frontends.
         </p>
         <a class="link" href="post2.html">View Post</a>
 
     </div>
 
     <div class="block">
-        <h1 class="block-h1">Post 3</h1>
-        <p class="block-p">This is my third blog post! I have not done it yet, but hopefully it turns out great.
+        <h1 class="block-h1">Post 3 -- 9/24/2020</h1>
+        <p class="block-p">This is my third blog post! This post is all about web transactions and how
+            to use them.
         </p>
+        <a class="link" href="post3.html">View Post</a>
 
     </div>
 
