--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="block">
         <h1 class="block-h1">Post 4</h1>
-        <p class="block-p">This is my fourth blog post! I have not done it yet, but hopefully it turns out great.
+        <p class="block-p">Whoops! Looks like I forgot to do this one. Hopefully I remember next week.
         </p>
 
     </div>
