--- a/post3.html
+++ b/post3.html
@@ -95,6 +95,10 @@
         </ul>
         <a class="link" href="index.html">Home</a>
     </div>
+    
+        <script data-ad-client="ca-pub-8984530254002670" async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
 </body>
 
 </html>
