--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         </p>
 
     </div>
+    <div class="block">
+        <h1 class="block-h1">Post 5 -- 10/8/2020</h1>
+        <p class="block-p">Looks like I remembered to do this one! This is my fifth blog post. This post is all about
+            hosting advertisements.
+        </p>
+        <a class="link" href="post5.html">View Post</a>
+
+    </div>
 </body>
 
 </html>
