--- a/post5.html
+++ b/post5.html
@@ -29,7 +29,7 @@
             for $30,000 for 3 months and had a click through rate of 44%. Nowadays ads have about .06% click through
             rate. Soon banner ads became more targeted to the customer and were placed on more related sites. Eventually
             pop-up ads became popular but were hated by consumers and are now rarely seen. As ads became more popular
-            and smaller sites arose, so did the pay-per-click and pay-per0view payment methods. As the field of
+            and smaller sites arose, so did the pay-per-click and pay-per-view payment methods. As the field of
             artificial intelligence and machine learning became more advanced ads became extremely targeted and can even
             use a computers microphone to detect what a user is talking about and provide even more targeted ads.
         </p>
