--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
         <a class="link" href="post5.html">View Post</a>
 
     </div>
+    
+    <div class="block">
+        <h1 class="block-h1">Post 6 -- 10/29/2020</h1>
+        <p class="block-p">This is my sixth blog post. This post is all about
+            user accounts.
+        </p>
+        <a class="link" href="post6.html">View Post</a>
+
+    </div>
 </body>
 
 </html>
