--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
         <a class="link" href="post6.html">View Post</a>
 
     </div>
+    
+    <div class="block">
+        <h1 class="block-h1">Post 7 -- 11/5/2020</h1>
+        <p class="block-p">This is my seventh blog post. This post is all about
+            regular expressions.
+        </p>
+        <a class="link" href="post7.html">View Post</a>
+
+    </div>
 </body>
 
 </html>
