--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
         <a class="link" href="post7.html">View Post</a>
 
     </div>
+    
+    <div class="block">
+        <h1 class="block-h1">Post 8 -- 11/12/2020</h1>
+        <p class="block-p">This is my eigth blog post. This post is all about
+            CAPTCHAs and how to use them.
+        </p>
+        <a class="link" href="post8.html">View Post</a>
+
+    </div>
 </body>
 
 </html>
