--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
         <a class="link" href="post8.html">View Post</a>
 
     </div>
+    
+    <div class="block">
+        <h1 class="block-h1">Post 9 -- 12/3/2020</h1>
+        <p class="block-p">This is my ninth blog post. This post is a review of the class CS 347.
+        </p>
+        <a class="link" href="post9.html">View Post</a>
+
+    </div>
 </body>
 
 </html>
